--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 
 <main>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
+    <div id="app">
     <div class="container">
 
         <div class="row rounded-3">
@@ -21,7 +24,7 @@
                 <div class="col-10 d-flex flex-column justify-content-center mt-5 p-0">
                     <div class="slider rounded-start-3 col-12 d-flex flex-column justify-content-center ">
                         <div class="images align-self-center">               
-
+                            <img :src="games[activeGame].image" alt="">
                         </div>
                     </div>
 
@@ -30,7 +33,8 @@
 
                 <div class="col-2 mt-5 p-0">
                     <div class="thumbnail">
-
+                        <img v-for="image in games"  :src="games.image" class="object-fit-cover img_height " 
+                        alt="">
                     </div>
                 
 
@@ -40,16 +44,17 @@
         </div>
 
             <nav class="d-flex justify-content-center align-content-between m-3">
-                <button class="btn btn-dark w-25 align-self-center prev mx-2">Prev</button>
-                <button class="btn btn-dark w-25 align-self-center next mx-2">Next</button>
+                <button class="btn btn-dark w-25 align-self-center prev mx-2" @click="prev">Prev</button>
+                <button class="btn btn-dark w-25 align-self-center next mx-2" @click="next">Next</button>
             </nav>
 
         </div>
     </div>
 
 </main>
+</div>
 
-    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
     
