--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
 
                 <div class="col-10 d-flex flex-column justify-content-center mt-5 p-0">
                     <div class="slider rounded-start-3 col-12 d-flex flex-column justify-content-center ">
-                        <div class="images align-self-center">               
+                        <div class="images align-self-center d-flex">               
                             <img :src="games[activeGame].image" alt="">
+                            <div class="text">
+                            <h3 class="text-light align-self-end">{{games[activeGame].title}}</h3>
+                            <p></p>
+                        </div>
                         </div>
                     </div>
 
@@ -33,8 +37,8 @@
 
                 <div class="col-2 mt-5 p-0">
                     <div class="thumbnail">
-                        <img :src="game.image" v-for="game in games" 
-                        v-for="(game, index) in games"
+                        <img :src="game.image" v-for="(game, index) in games" 
+                        
                         class="object-fit-cover img_height" 
                         alt="" @click="changeImage(index)">
                     </div>
